# poetry-demo2

./: .whitesource  pyproject.toml  whitesource.config
