[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Alex Maybaum <alex.maybaum@whitesourcesoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
urllib3 = "1.24.1"
pendulum = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
